# iris-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  conftest.py  iris_mcp.py  pyproject.toml  test_iris_mcp.py  types_catalog.py  verify_live.py
.github/workflows/: ci.yml
SKILL/: SKILL.md
docs/: admin.md  case.md  customer.md  example-prompt.md  global_search.md  helpers.md  index.md  session.md  users.md
